--- a/ltconfig.in
+++ b/ltconfig.in
@@ -486,6 +486,7 @@ archive_cmds=
 link_rpath_flag=
 hardcode_minus_L=no
 hardcode_shlibpath_var=no
+hardcode_direct=no
 
 ld_shlibs=yes
 if test "$with_gnu_ld" = yes; then
@@ -494,10 +495,13 @@ if test "$with_gnu_ld" = yes; then
   case "$host" in
   *-*-sunos4*)
     ld_shlibs=yes
+    hardcode_direct=yes
     ;;
 
   *)
     if $LD --help 2>&1 | egrep ': supported targets:.* elf' > /dev/null; then
+      # GNU ld on ELF does not support linking via the shlibpath_var.
+      hardcode_shlibpath_var=yes
       ld_shlibs=yes
     else
       ld_shlibs=no
@@ -514,24 +518,32 @@ else
   case "$host" in
   *-*-aix3*)
     archive_cmds='$rm $lib.exp;/usr/ucb/nm$libobjs | egrep \" D \" | sed \"s/^.* //\" > $lib.exp;$LD -o $objdir/$soname$libobjs -bE:$lib.exp -T512 -H512 -bM:SRE -lc$deplibs;ar cru $lib $objdir/$soname'
-    hardcode_shlibpath_var=yes
+    hardcode_direct=yes
     hardcode_minus_L=yes
+
+    # AIX ld does not support linking via the shlibpath_var.
+    hardcode_shlibpath_var=yes
     ;;
 
   *-*-aix4*)
     archive_cmds='$rm $lib.exp;/bin/nm -B$libobjs | egrep \" D \" | sed \"s/^.* //\" > $lib.exp;$cc -o $objdir/$soname$libobjs ${wl}-bE:$lib.exp ${wl}-bM:SRE ${wl}-bnoentry$deplibs;ar cru $lib $objdir/$soname'
-    hardcode_shlibpath_var=yes
+    hardcode_direct=yes
     hardcode_minus_L=yes
+
+    # AIX ld does not support linking via the shlibpath_var.
+    hardcode_shlibpath_var=yes
     ;;
 
   *-*-freebsd*)
     archive_cmds='$LD -Bshareable -o $lib$libobjs$deplibs'
+    hardcode_direct=yes
     hardcode_minus_L=yes
     ;;
 
   *-*-hpux9* | *-*-hpux10*)
     archive_cmds='$LD -b +h $soname +s +b $install_libdir -o $lib$libobjs$deplibs'
     link_rpath_flag='${wl}+b ${wl}$libdir'
+    hardcode_direct=yes
     hardcode_minus_L=yes
     hardcode_shlibpath_var=yes
     ;;
@@ -539,21 +551,25 @@ else
   *-*-irix5* | *-*-irix6*)
     archive_cmds='$LD -shared -o $lib -soname $soname -set_version $verstring$libobjs -lc$deplibs'
     link_rpath_flag='${wl}-rpath ${wl}$libdir'
+    hardcode_direct=yes
     ;;
 
   *-*-netbsd*)
     # Tested with NetBSD 1.2 ld
     archive_cmds='$LD -Bshareable -o $lib$libobjs$deplibs'
     link_rpath_flag='-R$libdir'
+    hardcode_direct=yes
     ;;
 
   *-*-osf3*)
     archive_cmds='$LD -shared -o $lib -soname $soname -set_version $verstring$libobjs -lc$deplibs'
     link_rpath_flag='${wl}-rpath ${wl}$libdir'
+    hardcode_direct=yes
     ;;
 
   *-*-sco3.2v5*)
     archive_cmds='$LD -G -o $lib$libobjs$deplibs'
+    hardcode_direct=yes
     ;;
 
   *-*-solaris2*)
@@ -564,6 +580,7 @@ else
   *-*-sunos4*)
     archive_cmds='$LD -assert pure-text -Bstatic -o $lib$libobjs'
     link_rpath_flag='-L$libdir'
+    hardcode_direct=yes
     hardcode_minus_L=yes
     ;;
 
@@ -800,6 +817,7 @@ profile_flag_pattern='$profile_flag_pattern'
 version_type=$version_type
 
 # List of archive names.  First name is the real one, the rest are links.
+# The last name is the one that the linker finds with -lNAME.
 lib_names='$lib_names'
 
 # The coded name of the library, if different from the real name.
@@ -827,13 +845,17 @@ old_striplib='$old_striplib'
 # This is the shared library path variable.
 shlibpath_var=$shlibpath_var
 
-# Set to yes if using SHLIBPATH_VAR=DIR during linking hardcodes DIR into the
-# the resulting binary.
-hardcode_shlibpath_var=$hardcode_shlibpath_var
+# Set to yes if using DIR/libNAME.so during linking hardcodes DIR into the
+# resulting binary.
+hardcode_direct=$hardcode_direct
 
 # Set to yes if using the -LDIR flag during linking hardcodes DIR into the
 # resulting binary.
 hardcode_minus_L=$hardcode_minus_L
+
+# Set to yes if using SHLIBPATH_VAR=DIR during linking hardcodes DIR into the
+# the resulting binary.
+hardcode_shlibpath_var=$hardcode_shlibpath_var
 
 EOF
 
