--- a/ltconfig.in
+++ b/ltconfig.in
@@ -484,7 +484,7 @@ echo $ac_t "$with_gnu_ld" 1>&6
 echo $ac_n "checking if $linker supports shared libraries... $ac_c" 1>&6
 
 archive_cmds=
-link_rpath_flag=
+hardcode_libdir_flag=
 hardcode_direct=no
 hardcode_minus_L=no
 hardcode_shlibpath_var=unsupported
@@ -511,20 +511,20 @@ if test "$with_gnu_ld" = yes; then
 
   if test "$ld_shlibs" = yes; then
     archive_cmds='$cc -shared ${wl}-soname $wl$soname -o $lib$libobjs$deplibs'
-    link_rpath_flag='${wl}-rpath $wl$libdir'
+    hardcode_libdir_flag='${wl}-rpath $wl$libdir'
   fi
 else
   # PORTME fill in a description of your system's linker (not GNU ld)
   case "$host" in
   *-*-aix3*)
-    archive_cmds='$rm $lib.exp;/usr/ucb/nm$libobjs | egrep \" D \" | sed \"s/^.* //\" > $lib.exp;$LD -o $objdir/$soname$libobjs -bE:$lib.exp -T512 -H512 -bM:SRE -lc$deplibs;ar cru $lib $objdir/$soname'
-    hardcode_direct=yes
+    archive_cmds='/usr/ucb/nm$libobjs | egrep \" D \" | sed \"s/^.* //\" > $lib.exp;$LD -o $objdir/$soname$libobjs -bE:$lib.exp -T512 -H512 -bM:SRE -lc$deplibs;ar cru $lib $objdir/$soname'
+    test "$with_gcc" != yes && hardcode_direct=yes
     hardcode_minus_L=yes
     ;;
 
   *-*-aix4*)
-    archive_cmds='$rm $lib.exp;/bin/nm -B$libobjs | egrep \" D \" | sed \"s/^.* //\" > $lib.exp;$cc -o $objdir/$soname$libobjs ${wl}-bE:$lib.exp ${wl}-bM:SRE ${wl}-bnoentry$deplibs;ar cru $lib $objdir/$soname'
-    hardcode_direct=yes
+    archive_cmds='/bin/nm -B$libobjs | egrep \" D \" | sed \"s/^.* //\" > $lib.exp;$cc -o $objdir/$soname$libobjs ${wl}-bE:$lib.exp ${wl}-bM:SRE ${wl}-bnoentry$deplibs;ar cru $lib $objdir/$soname'
+    test "$with_gcc" != yes && hardcode_direct=yes
     hardcode_minus_L=yes
     ;;
 
@@ -537,34 +537,34 @@ else
 
   *-*-hpux9*)
     archive_cmds='$rm $objdir/$soname;$LD -b +s +b $install_libdir -o $objdir/$soname$libobjs$deplibs;mv $objdir/$soname $lib'
-    link_rpath_flag='${wl}+b ${wl}$libdir'
+    hardcode_libdir_flag='${wl}+b ${wl}$libdir'
     hardcode_direct=yes
     hardcode_minus_L=yes
     ;;
 
   *-*-hpux10*)
     archive_cmds='$LD -b +h $soname +s +b $install_libdir -o $lib$libobjs$deplibs'
-    link_rpath_flag='${wl}+b ${wl}$libdir'
+    hardcode_libdir_flag='${wl}+b ${wl}$libdir'
     hardcode_direct=yes
     hardcode_minus_L=yes
     ;;
 
   *-*-irix5* | *-*-irix6*)
     archive_cmds='$LD -shared -o $lib -soname $soname -set_version $verstring$libobjs -lc$deplibs'
-    link_rpath_flag='${wl}-rpath ${wl}$libdir'
+    hardcode_libdir_flag='${wl}-rpath ${wl}$libdir'
     ;;
 
   *-*-netbsd*)
     # Tested with NetBSD 1.2 ld
     archive_cmds='$LD -Bshareable -o $lib$libobjs$deplibs'
-    link_rpath_flag='-R$libdir'
+    hardcode_libdir_flag='-R$libdir'
     hardcode_direct=yes
     hardcode_shlibpath_var=no
     ;;
 
   *-*-osf3*)
     archive_cmds='$LD -shared -o $lib -soname $soname -set_version $verstring$libobjs -lc$deplibs'
-    link_rpath_flag='${wl}-rpath ${wl}$libdir'
+    hardcode_libdir_flag='${wl}-rpath ${wl}$libdir'
     ;;
 
   *-*-sco3.2v5*)
@@ -574,13 +574,13 @@ else
 
   *-*-solaris2*)
     archive_cmds='$LD -G -z text -h $soname -o $lib$libobjs$deplibs'
-    link_rpath_flag='-R$libdir'
+    hardcode_libdir_flag='-R$libdir'
     hardcode_shlibpath_var=no
     ;;
 
   *-*-sunos4*)
     archive_cmds='$LD -assert pure-text -Bstatic -o $lib$libobjs'
-    link_rpath_flag='-L$libdir'
+    hardcode_libdir_flag='-L$libdir'
     hardcode_direct=yes
     hardcode_minus_L=yes
     hardcode_shlibpath_var=no
@@ -594,10 +594,33 @@ else
 fi
 echo $ac_t "$ld_shlibs" 1>&6
 
-if test "$hardcode_shlibpath_var" != no && test "$hardcode_minus_L" = yes; then
-  echo "$progname: warning: $LD needlessly hardcodes library paths into binaries" 1>&2
-  echo "$PACKAGE will compensate by relinking binaries at install time." 1>&2
+# Check hardcoding attributes.
+echo $ac_n "checking how to hardcode library paths into programs... $ac_c" 1>&6
+hardcode_action=
+if test -n "$hardcode_libdir_flag"; then
+  # We can hardcode non-existant directories.
+  if test "$hardcode_direct" != no &&
+     test "$hardcode_minus_L" != no &&
+     test "$hardcode_shlibpath_var" != no; then
+
+    # Can't link without hardcoding.
+    hardcode_action=relink
+  else
+    hardcode_action=rpath
+  fi
+elif test "$hardcode_direct" = yes ||
+     test "$hardcode_minus_L" = yes ||
+     test "$hardcode_shlibpath_var" = yes; then
+
+  # We can't hardcode non-existant directories, but we can existing ones.
+  hardcode_action=relink
+else
+  # We can't hardcode anything.
+  hardcode_action=unsupported
 fi
+echo $ac_t "$hardcode_action" 1>&6
+test "$hardcode_action" = unsupported && can_build_shared=no
+
 
 reload_flag=
 reload_cmds='$LD$reload_flag -o $output$reload_objs'
@@ -837,15 +860,19 @@ postinstall_cmds='$postinstall_cmds'
 # Commands used to finish a libtool library installation in a directory.
 finish_cmds='$finish_cmds'
 
-# The flag that specifies a runtime search path when linking.
-link_rpath_flag='$link_rpath_flag'
-
 # How to strip a library file.
 striplib='$striplib'
 old_striplib='$old_striplib'
 
 # This is the shared library path variable.
 shlibpath_var=$shlibpath_var
+
+# How to hardcode a shared library path into an executable.
+hardcode_action=$hardcode_action
+
+# Flag to hardcode \$libdir into a binary during linking.
+# This must work even if \$libdir does not exist.
+hardcode_libdir_flag='$hardcode_libdir_flag'
 
 # Set to yes if using DIR/libNAME.so during linking hardcodes DIR into the
 # resulting binary.
