--- a/demo/configure.in
+++ b/demo/configure.in
@@ -1,8 +1,9 @@
 dnl Initialize the hell package.
 AC_INIT(hello.c)
-AM_INIT_AUTOMAKE(hell,0.0)
+AM_INIT_AUTOMAKE(hell,1.0)
 
 AC_PROG_CC
+AM_C_PROTOTYPES
 AM_PROG_LIBTOOL
 
 dnl Output the makefile
