--- a/libtoolize.in
+++ b/libtoolize.in
@@ -39,6 +39,7 @@ aclocaldir=@aclocaldir@
 
 libtool_m4="$aclocaldir/libtool.m4"
 
+dry_run=no
 help="Try \`$progname --help' for more information."
 rm="rm -f"
 ln_s="ln -s"
@@ -61,6 +62,7 @@ Prepare a package to use libtool.
 
     --automake        work silently, and assume that Automake is in use
 -c, --copy            copy files rather than symlinking them
+-n, --dry-run         print commands rather than running them
 -f, --force           replace existing files
     --help            display this message and exit
     --version         print version information and exit
@@ -82,6 +84,15 @@ EOF
 
   -c | --copy)
     ln_s=
+    ;;
+
+  -n | --dry-run)
+    if test "$dry_run" != yes; then
+      dry_run=yes
+      rm="echo $rm"
+      test -n "$ln_s" && ln_s="echo $ln_s"
+      cp="echo $cp"
+    fi
     ;;
 
   -f | --force)
